SIM-2217 UPDATE testing description.getDescription() in rule tests
Replacing hamcrest assertThat - equalTo - constructs